# painterPoint

./: Board.cpp  Board.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Shapes/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Painter.cpp  Painter.h  Polygon.cpp  Polygon.h  Random.cpp  Random.h  Rectangular.cpp  Rectangular.h  Shape.cpp  Shape.h  Square.cpp  Square.h  Star.cpp  Star.h  Triangular.cpp  Triangular.h
